# nerc-env

./: .gitignore  Dockerfile  README.md  app_entry.py  env.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  server.py  tasks.py  test_env.py  validate-submission.sh
nerc_env/: app.py
nerc_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: app.py
