[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nerc-env"
version = "1.0.0"
description = "National Emergency Response & Care Environment — OpenEnv compliant RL environment"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "harshitjaiswal08"}
]
keywords = ["openenv", "reinforcement-learning", "emergency-response", "healthcare"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=2.7.2",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "nerc_env.app:main"

[tool.openenv]
server_module = "nerc_env.app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
